<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spotify Music Player</string>
    <string name="login_button">Login with Spotify</string>
    <string name="logout_button">Logout</string>
    <string name="play_button">Play</string>
    <string name="pause_button">Pause</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="logged_in_as">Logged in as: %1$s</string>
    <string name="now_playing">Now playing: %1$s by %2$s</string>
    <string name="login_failed">Login failed: %1$s</string>
    <string name="login_success">Login successful!</string>
</resources>
